apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - name: http
    port: 8000
  selector:
    app: app
